InSCAPE/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gisdefs.h


char *G_get_ith_c_raster_cat(const struct Categories *, int, void *, void *);

char *G_get_ith_raster_cat(const struct Categories *, int, void *, void *,
			   RASTER_MAP_TYPE);

int G_init_cats(CELL, const char *, struct Categories *);

int G_init_raster_cats(const char *, struct Categories *);

int G_set_cats_title(const char *, struct Categories *);

int G_set_raster_cats_title(const char *, struct Categories *);

int G_set_cats_fmt(const char *, double, double, double, double,
		   struct Categories *);

int G_set_raster_cats_fmt(const char *, double, double, double, double,
			  struct Categories *);

int G_free_cats(struct Categories *);

int G_free_raster_cats(struct Categories *);

int G_copy_raster_cats(struct Categories *, const struct Categories *);

int G_number_of_raster_cats(struct Categories *);

int G_sort_cats(struct Categories *);


/* cell_stats.c */
int G_init_cell_stats(struct Cell_stats *);

int G_update_cell_stats(const CELL *, int, struct Cell_stats *);

int G_find_cell_stat(CELL, long *, const struct Cell_stats *);

int G_rewind_cell_stats(struct Cell_stats *);

int G_next_cell_stat(CELL *, long *, struct Cell_stats *);

int G_get_stats_for_null_value(long *, const struct Cell_stats *);

int G_free_cell_stats(struct Cell_stats *);


/* cell_title.c */
char *G_get_cell_title(const char *, const char *);


/* cellstats_eq.c */
int G_cell_stats_histo_eq(struct Cell_stats *, CELL, CELL, CELL, CELL, int,
			  void (*)(CELL, CELL, CELL));


/* chop.c */
char *G_chop(char *);


/* clear_scrn.c */
int G_clear_screen(void);


/* clicker.c */
int G_clicker(void);


/* closecell.c */
int G_close_cell(int);

int G_unopen_cell(int);

int G__write_fp_format(int);


/* color_compat.c */
int G_make_ryg_colors(struct Colors *, CELL, CELL);

int G_make_ryg_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_aspect_colors(struct Colors *, CELL, CELL);

int G_make_aspect_fp_colors(struct Colors *, DCELL, DCELL);

int G_make_byr_colors(struct Colors *, CELL, CELL);

int G_make_byr_fp_colors(struct Colors *, DCELL, DCELL);