OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/gis.py


# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 183
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_ith_c_raster_cat'):
    G_get_ith_c_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_ith_c_raster_cat
    G_get_ith_c_raster_cat.restype = ReturnString
    G_get_ith_c_raster_cat.argtypes = [POINTER(struct_Categories), c_int, POINTER(None), POINTER(None)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 184
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_ith_raster_cat'):
    G_get_ith_raster_cat = _libs['grass_gis.6.4.2RC2'].G_get_ith_raster_cat
    G_get_ith_raster_cat.restype = ReturnString
    G_get_ith_raster_cat.argtypes = [POINTER(struct_Categories), c_int, POINTER(None), POINTER(None), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 186
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_init_cats'):
    G_init_cats = _libs['grass_gis.6.4.2RC2'].G_init_cats
    G_init_cats.restype = c_int
    G_init_cats.argtypes = [CELL, String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 187
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_init_raster_cats'):
    G_init_raster_cats = _libs['grass_gis.6.4.2RC2'].G_init_raster_cats
    G_init_raster_cats.restype = c_int
    G_init_raster_cats.argtypes = [String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 188
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_cats_title'):
    G_set_cats_title = _libs['grass_gis.6.4.2RC2'].G_set_cats_title
    G_set_cats_title.restype = c_int
    G_set_cats_title.argtypes = [String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 189
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_raster_cats_title'):
    G_set_raster_cats_title = _libs['grass_gis.6.4.2RC2'].G_set_raster_cats_title
    G_set_raster_cats_title.restype = c_int
    G_set_raster_cats_title.argtypes = [String, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 190
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_cats_fmt'):
    G_set_cats_fmt = _libs['grass_gis.6.4.2RC2'].G_set_cats_fmt
    G_set_cats_fmt.restype = c_int
    G_set_cats_fmt.argtypes = [String, c_double, c_double, c_double, c_double, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 192
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_raster_cats_fmt'):
    G_set_raster_cats_fmt = _libs['grass_gis.6.4.2RC2'].G_set_raster_cats_fmt
    G_set_raster_cats_fmt.restype = c_int
    G_set_raster_cats_fmt.argtypes = [String, c_double, c_double, c_double, c_double, POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 194
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_free_cats'):
    G_free_cats = _libs['grass_gis.6.4.2RC2'].G_free_cats
    G_free_cats.restype = c_int
    G_free_cats.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 195
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_free_raster_cats'):
    G_free_raster_cats = _libs['grass_gis.6.4.2RC2'].G_free_raster_cats
    G_free_raster_cats.restype = c_int
    G_free_raster_cats.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 196
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_copy_raster_cats'):
    G_copy_raster_cats = _libs['grass_gis.6.4.2RC2'].G_copy_raster_cats
    G_copy_raster_cats.restype = c_int
    G_copy_raster_cats.argtypes = [POINTER(struct_Categories), POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 197
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_number_of_raster_cats'):
    G_number_of_raster_cats = _libs['grass_gis.6.4.2RC2'].G_number_of_raster_cats
    G_number_of_raster_cats.restype = c_int
    G_number_of_raster_cats.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 198
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_sort_cats'):
    G_sort_cats = _libs['grass_gis.6.4.2RC2'].G_sort_cats
    G_sort_cats.restype = c_int
    G_sort_cats.argtypes = [POINTER(struct_Categories)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 201
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_init_cell_stats'):
    G_init_cell_stats = _libs['grass_gis.6.4.2RC2'].G_init_cell_stats
    G_init_cell_stats.restype = c_int
    G_init_cell_stats.argtypes = [POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 202
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_update_cell_stats'):
    G_update_cell_stats = _libs['grass_gis.6.4.2RC2'].G_update_cell_stats
    G_update_cell_stats.restype = c_int
    G_update_cell_stats.argtypes = [POINTER(CELL), c_int, POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 203
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_find_cell_stat'):
    G_find_cell_stat = _libs['grass_gis.6.4.2RC2'].G_find_cell_stat
    G_find_cell_stat.restype = c_int
    G_find_cell_stat.argtypes = [CELL, POINTER(c_long), POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 204
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_rewind_cell_stats'):
    G_rewind_cell_stats = _libs['grass_gis.6.4.2RC2'].G_rewind_cell_stats
    G_rewind_cell_stats.restype = c_int
    G_rewind_cell_stats.argtypes = [POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 205
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_next_cell_stat'):
    G_next_cell_stat = _libs['grass_gis.6.4.2RC2'].G_next_cell_stat
    G_next_cell_stat.restype = c_int
    G_next_cell_stat.argtypes = [POINTER(CELL), POINTER(c_long), POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 206
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_stats_for_null_value'):
    G_get_stats_for_null_value = _libs['grass_gis.6.4.2RC2'].G_get_stats_for_null_value
    G_get_stats_for_null_value.restype = c_int
    G_get_stats_for_null_value.argtypes = [POINTER(c_long), POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 207
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_free_cell_stats'):
    G_free_cell_stats = _libs['grass_gis.6.4.2RC2'].G_free_cell_stats
    G_free_cell_stats.restype = c_int
    G_free_cell_stats.argtypes = [POINTER(struct_Cell_stats)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 210
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_cell_title'):
    G_get_cell_title = _libs['grass_gis.6.4.2RC2'].G_get_cell_title
    G_get_cell_title.restype = ReturnString
    G_get_cell_title.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 213
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_cell_stats_histo_eq'):
    G_cell_stats_histo_eq = _libs['grass_gis.6.4.2RC2'].G_cell_stats_histo_eq
    G_cell_stats_histo_eq.restype = c_int
    G_cell_stats_histo_eq.argtypes = [POINTER(struct_Cell_stats), CELL, CELL, CELL, CELL, c_int, CFUNCTYPE(UNCHECKED(None), CELL, CELL, CELL)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 217
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_chop'):
    G_chop = _libs['grass_gis.6.4.2RC2'].G_chop
    G_chop.restype = ReturnString
    G_chop.argtypes = [String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 220
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_clear_screen'):
    G_clear_screen = _libs['grass_gis.6.4.2RC2'].G_clear_screen
    G_clear_screen.restype = c_int
    G_clear_screen.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 223
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_clicker'):
    G_clicker = _libs['grass_gis.6.4.2RC2'].G_clicker
    G_clicker.restype = c_int
    G_clicker.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 226
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_close_cell'):
    G_close_cell = _libs['grass_gis.6.4.2RC2'].G_close_cell
    G_close_cell.restype = c_int
    G_close_cell.argtypes = [c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 227
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_unopen_cell'):
    G_unopen_cell = _libs['grass_gis.6.4.2RC2'].G_unopen_cell
    G_unopen_cell.restype = c_int
    G_unopen_cell.argtypes = [c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 228
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__write_fp_format'):
    G__write_fp_format = _libs['grass_gis.6.4.2RC2'].G__write_fp_format
    G__write_fp_format.restype = c_int
    G__write_fp_format.argtypes = [c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 231
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_ryg_colors'):
    G_make_ryg_colors = _libs['grass_gis.6.4.2RC2'].G_make_ryg_colors
    G_make_ryg_colors.restype = c_int
    G_make_ryg_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 232
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_ryg_fp_colors'):
    G_make_ryg_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_ryg_fp_colors
    G_make_ryg_fp_colors.restype = c_int
    G_make_ryg_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 233
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_aspect_colors'):
    G_make_aspect_colors = _libs['grass_gis.6.4.2RC2'].G_make_aspect_colors
    G_make_aspect_colors.restype = c_int
    G_make_aspect_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 234
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_aspect_fp_colors'):
    G_make_aspect_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_aspect_fp_colors
    G_make_aspect_fp_colors.restype = c_int
    G_make_aspect_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 235
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_byr_colors'):
    G_make_byr_colors = _libs['grass_gis.6.4.2RC2'].G_make_byr_colors
    G_make_byr_colors.restype = c_int
    G_make_byr_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 236
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_byr_fp_colors'):
    G_make_byr_fp_colors = _libs['grass_gis.6.4.2RC2'].G_make_byr_fp_colors
    G_make_byr_fp_colors.restype = c_int
    G_make_byr_fp_colors.argtypes = [POINTER(struct_Colors), DCELL, DCELL]
